Skip mujoco rendering inside docker, fix control notebooks

--- a/notebooks/nb_20_IntroductionToControl.ipynb
+++ b/notebooks/nb_20_IntroductionToControl.ipynb
@@ -59,6 +59,7 @@
    "outputs": [],
    "source": [
     "%autoreload\n",
+    "import os\n",
     "import warnings\n",
     "from dataclasses import dataclass\n",
     "from typing import Callable, Protocol\n",
@@ -66,7 +67,6 @@
     "import control as ct\n",
     "import gymnasium as gym\n",
     "import matplotlib.pyplot as plt\n",
-    "import mediapy as media\n",
     "import numpy as np\n",
     "import seaborn as sns\n",
     "import sympy as sym\n",
@@ -87,12 +87,15 @@
     "    plot_estimator_response,\n",
     "    plot_mass_spring_damper_results,\n",
     "    plot_inverted_pendulum_results,\n",
-    "    display_array\n",
+    "    display_array,\n",
+    "    show_video,\n",
     ")\n",
     "\n",
     "warnings.simplefilter(\"ignore\", UserWarning)\n",
     "sns.set_theme()\n",
-    "plt.rcParams[\"figure.figsize\"] = [12, 8]"
+    "plt.rcParams[\"figure.figsize\"] = [12, 8]\n",
+    "# This is needed because inside docker the rendering of mujoco environments doesn't work.\n",
+    "render_mode = \"rgb_array\" if os.getlogin() != \"jovyan\" else None"
    ]
   },
   {
@@ -369,21 +372,18 @@
    },
    "outputs": [],
    "source": [
-    "env = create_mass_spring_damper_environment()\n",
+    "env = create_mass_spring_damper_environment(render_mode=render_mode)\n",
     "env.reset()\n",
-    "all_frames = []\n",
-    "for i in range(2):\n",
-    "    frames = []\n",
-    "    for _ in range(100):\n",
-    "        if i == 1:\n",
-    "            action = np.zeros_like(env.action_space.sample())\n",
-    "        else:\n",
-    "            action = env.action_space.sample()\n",
-    "        observation, _, terminated, truncated, _ = env.step(action)\n",
-    "        if terminated or truncated:\n",
-    "            all_frames.append(env.render())\n",
-    "            env.reset()\n",
-    "            break\n",
+    "\n",
+    "frames = []\n",
+    "for i in range(100):\n",
+    "    action = np.array([i * 0.1])\n",
+    "    observation, _, terminated, truncated, _ = env.step(action)\n",
+    "    if terminated or truncated:\n",
+    "        if env.render_mode is not None:\n",
+    "            frames = env.render()\n",
+    "        env.reset()\n",
+    "        break\n",
     "env.close()"
    ]
   },
@@ -397,7 +397,7 @@
    },
    "outputs": [],
    "source": [
-    "media.show_videos(all_frames, fps=1 / env.dt)"
+    "show_video(frames, fps=1 / env.dt)"
    ]
   },
   {
@@ -550,21 +550,18 @@
    },
    "outputs": [],
    "source": [
-    "env = create_inverted_pendulum_environment(max_steps=100, cutoff_angle=np.inf)\n",
+    "env = create_inverted_pendulum_environment(render_mode=render_mode, max_steps=100, cutoff_angle=np.inf)\n",
     "env.reset()\n",
-    "all_frames = []\n",
-    "for i in range(2):\n",
-    "    frames = []\n",
-    "    for _ in range(100):\n",
-    "        if i == 1:\n",
-    "            action = np.zeros_like(env.action_space.sample())\n",
-    "        else:\n",
-    "            action = env.action_space.sample()\n",
-    "        observation, _, terminated, truncated, _ = env.step(action)\n",
-    "        if terminated or truncated:\n",
-    "            all_frames.append(env.render())\n",
-    "            env.reset()\n",
-    "            break\n",
+    "\n",
+    "frames = []\n",
+    "for _ in range(100):\n",
+    "    action = np.zeros_like(env.action_space.sample())\n",
+    "    observation, _, terminated, truncated, _ = env.step(action)\n",
+    "    if terminated or truncated:\n",
+    "        if env.render_mode is not None:\n",
+    "            frames= env.render()\n",
+    "        env.reset()\n",
+    "        break\n",
     "env.close()"
    ]
   },
@@ -578,7 +575,7 @@
    },
    "outputs": [],
    "source": [
-    "media.show_videos(all_frames, fps=1 / env.dt)"
+    "show_video(frames, fps=1 / env.dt)"
    ]
   },
   {
@@ -682,6 +679,7 @@
     "    actions = []\n",
     "    observations = [observation]\n",
     "    estimated_observations = []\n",
+    "    frames = []\n",
     "\n",
     "    if observer is not None:\n",
     "        estimated_observation = observer.observe(observation)\n",
@@ -700,7 +698,8 @@
     "\n",
     "        # Check if we need to stop the simulation\n",
     "        if terminated or truncated:\n",
-    "            frames = env.render()\n",
+    "            if env.render_mode is not None:\n",
+    "                frames = env.render()\n",
     "            env.reset()\n",
     "            break\n",
     "    env.close()\n",
@@ -728,9 +727,9 @@
    },
    "outputs": [],
    "source": [
-    "env = create_mass_spring_damper_environment()\n",
+    "env = create_mass_spring_damper_environment(render_mode=render_mode)\n",
     "results = simulate_environment(env)\n",
-    "media.show_video(results.frames, fps=1 / env.dt)"
+    "show_video(results.frames, fps=1 / env.dt)"
    ]
   },
   {
@@ -829,10 +828,16 @@
    "outputs": [],
    "source": [
     "def control_inverted_pendulum(K=widgets.FloatSlider(min=0.0, max=100.0, step=1, value=1.0)):\n",
-    "    env = create_inverted_pendulum_environment()\n",
+    "    env = create_inverted_pendulum_environment(render_mode=render_mode)\n",
     "    controller = ProportionalController(K)\n",
     "    results = simulate_environment(env, max_steps=300, controller=controller)\n",
-    "    media.show_video(results.frames, fps=1 / env.dt)\n",
+    "    if env.render_mode is None:\n",
+    "        T = np.arange(len(results.observations)) * env.dt\n",
+    "        plt.plot(T, results.observations[:, 0])\n",
+    "        plt.xlabel(\"Time\")\n",
+    "        plt.ylabel(\"Angle\")\n",
+    "    else:\n",
+    "        show_video(results.frames, fps=1 / env.dt)\n",
     "\n",
     "\n",
     "interact(control_inverted_pendulum);"
@@ -1947,7 +1952,7 @@
    "outputs": [],
    "source": [
     "max_steps = 300\n",
-    "env = create_mass_spring_damper_environment(max_steps=max_steps)\n",
+    "env = create_mass_spring_damper_environment(render_mode=render_mode, max_steps=max_steps)\n",
     "controller = StepController()\n",
     "results = simulate_environment(env, max_steps=max_steps, controller=controller)\n",
     "observations = results.observations\n",
@@ -2315,7 +2320,7 @@
    "outputs": [],
    "source": [
     "max_steps = 10\n",
-    "env = create_inverted_pendulum_environment(max_steps=max_steps)\n",
+    "env = create_inverted_pendulum_environment(render_mode=render_mode, max_steps=max_steps)\n",
     "controller = ConstantController()\n",
     "results = simulate_environment(env, max_steps=max_steps, controller=controller)"
    ]
@@ -3210,7 +3215,7 @@
    },
    "outputs": [],
    "source": [
-    "env = create_mass_spring_damper_environment()\n",
+    "env = create_mass_spring_damper_environment(render_mode=render_mode)\n",
     "dt = env.dt\n",
     "T = np.arange(0, len(observations) * dt - dt, dt)\n",
     "U = np.concatenate([observations[1:, [1]], actions], axis=1).transpose()\n",
@@ -3328,7 +3333,7 @@
    "outputs": [],
    "source": [
     "max_steps = 20\n",
-    "env = create_inverted_pendulum_environment(max_steps=max_steps)\n",
+    "env = create_inverted_pendulum_environment(render_mode=render_mode, max_steps=max_steps)\n",
     "controller = ProportionalController(K=20)\n",
     "results = simulate_environment(env, max_steps=max_steps, controller=controller)\n",
     "observations = results.observations\n",
@@ -3378,7 +3383,7 @@
    },
    "outputs": [],
    "source": [
-    "env = create_inverted_pendulum_environment()\n",
+    "env = create_inverted_pendulum_environment(render_mode=render_mode)\n",
     "dt = env.dt\n",
     "T = np.arange(0, len(observations) * dt, dt)\n",
     "T = T[: len(observations) - 1]\n",
@@ -3810,7 +3815,7 @@
    },
    "outputs": [],
    "source": [
-    "env = create_mass_spring_damper_environment()\n",
+    "env = create_mass_spring_damper_environment(render_mode=render_mode)\n",
     "n_steps = 100\n",
     "T = np.arange(0, n_steps) * env.dt\n",
     "x0 = np.zeros(closed_loop.nstates)\n",
@@ -3875,7 +3880,7 @@
    "outputs": [],
    "source": [
     "max_steps = 100\n",
-    "env = create_mass_spring_damper_environment(max_steps=max_steps)\n",
+    "env = create_mass_spring_damper_environment(render_mode=render_mode, max_steps=max_steps)\n",
     "controller = FullStateFeedbackController(K=K, kr=kr, reference=0.1)\n",
     "results = simulate_environment(env, max_steps=max_steps, controller=controller)\n",
     "observations = results.observations\n",
@@ -3893,7 +3898,7 @@
    },
    "outputs": [],
    "source": [
-    "media.show_video(results.frames, fps=1 / env.dt)"
+    "show_video(results.frames, fps=1 / env.dt)"
    ]
   },
   {
@@ -4024,7 +4029,7 @@
    },
    "outputs": [],
    "source": [
-    "env = create_mass_spring_damper_environment()\n",
+    "env = create_mass_spring_damper_environment(render_mode=render_mode)\n",
     "n_steps = 100\n",
     "T = np.arange(0, n_steps) * env.dt\n",
     "x0 = np.zeros(closed_loop.nstates)\n",
@@ -4095,7 +4100,7 @@
    "outputs": [],
    "source": [
     "max_steps = 500\n",
-    "env = create_inverted_pendulum_environment(max_steps=max_steps)\n",
+    "env = create_inverted_pendulum_environment(render_mode=render_mode, max_steps=max_steps)\n",
     "controller = FullStateFeedbackController(K=K, kr=kr, reference=0.0)\n",
     "results = simulate_environment(env, max_steps=max_steps, controller=controller)\n",
     "observations = results.observations\n",
@@ -4113,7 +4118,7 @@
    },
    "outputs": [],
    "source": [
-    "media.show_video(results.frames, fps=1 / env.dt)"
+    "show_video(results.frames, fps=1 / env.dt)"
    ]
   },
   {
@@ -4531,7 +4536,7 @@
    "outputs": [],
    "source": [
     "max_steps = 500\n",
-    "env = create_mass_spring_damper_environment(max_steps=max_steps)\n",
+    "env = create_mass_spring_damper_environment(render_mode=render_mode, max_steps=max_steps)\n",
     "r = 0.1\n",
     "controller = PIDController(Kp=Kp, Ki=Ki, Kd=Kd, reference=r, dt=env.dt)\n",
     "results = simulate_environment(env, max_steps=max_steps, controller=controller)\n",
@@ -4550,7 +4555,7 @@
    },
    "outputs": [],
    "source": [
-    "media.show_video(results.frames, fps=1 / env.dt)"
+    "show_video(results.frames, fps=1 / env.dt)"
    ]
   },
   {
@@ -4717,7 +4722,7 @@
    "outputs": [],
    "source": [
     "max_steps = 500\n",
-    "env = create_inverted_pendulum_environment(max_steps=max_steps)\n",
+    "env = create_inverted_pendulum_environment(render_mode=render_mode, max_steps=max_steps)\n",
     "r = 0.0\n",
     "controller = PIDController(Kp=Kp, Ki=Ki, Kd=Kd, reference=r, dt=env.dt)\n",
     "results = simulate_environment(env, max_steps=max_steps, controller=controller)\n",
@@ -4736,7 +4741,7 @@
    },
    "outputs": [],
    "source": [
-    "media.show_video(results.frames, fps=1 / env.dt)"
+    "show_video(results.frames, fps=1 / env.dt)"
    ]
   },
   {
