--- a/notebooks/nb_30_ControlAndPlanning.ipynb
+++ b/notebooks/nb_30_ControlAndPlanning.ipynb
@@ -66,6 +66,7 @@
    "outputs": [],
    "source": [
     "%autoreload\n",
+    "import os\n",
     "import warnings\n",
     "from dataclasses import dataclass\n",
     "from typing import Protocol\n",
@@ -74,7 +75,6 @@
     "import do_mpc\n",
     "import gymnasium as gym\n",
     "import matplotlib.pyplot as plt\n",
-    "import mediapy as media\n",
     "import numpy as np\n",
     "import seaborn as sns\n",
     "from gymnasium import Env\n",
@@ -96,11 +96,14 @@
     "    animate_inverted_pendulum_simulation,\n",
     "    animate_full_inverted_pendulum_simulation,\n",
     "    display_array,\n",
+    "    show_video,\n",
     ")\n",
     "\n",
     "warnings.simplefilter(\"ignore\", UserWarning)\n",
     "sns.set_theme()\n",
-    "plt.rcParams[\"figure.figsize\"] = [9, 5]"
+    "plt.rcParams[\"figure.figsize\"] = [9, 5]\n",
+    "# This is needed because inside docker the rendering of mujoco environments doesn't work.\n",
+    "render_mode = \"rgb_array\" if os.getlogin() != \"jovyan\" else None"
    ]
   },
   {
@@ -1276,6 +1279,7 @@
     "    observation, _ = env.reset()\n",
     "    actions = []\n",
     "    observations = [observation]\n",
+    "    frames = []\n",
     "\n",
     "    for _ in range(max_steps):\n",
     "        action = controller.act(observation)\n",
@@ -1286,7 +1290,8 @@
     "\n",
     "        # Check if we need to stop the simulation\n",
     "        if terminated or truncated:\n",
-    "            frames = env.render()\n",
+    "            if env.render_mode is not None:\n",
+    "                frames = env.render()\n",
     "            env.reset()\n",
     "            break\n",
     "    env.close()\n",
@@ -1803,7 +1808,7 @@
    },
    "outputs": [],
    "source": [
-    "env = create_mass_spring_damper_environment()\n",
+    "env = create_mass_spring_damper_environment(render_mode=render_mode)\n",
     "lqr.settings.t_step = env.dt\n",
     "lqr.settings.n_horizon = None  # infinite horizon"
    ]
@@ -1973,7 +1978,7 @@
    "outputs": [],
    "source": [
     "max_steps = 100\n",
-    "env = create_mass_spring_damper_environment(max_steps=max_steps)\n",
+    "env = create_mass_spring_damper_environment(render_mode=render_mode, max_steps=max_steps)\n",
     "controller = LQRController(lqr)\n",
     "results = simulate_environment(env, max_steps=max_steps, controller=controller)"
    ]
@@ -1988,7 +1993,7 @@
    },
    "outputs": [],
    "source": [
-    "media.show_video(results.frames, fps=1 / env.dt)"
+    "show_video(results.frames, fps=1 / env.dt)"
    ]
   },
   {
@@ -2056,22 +2061,55 @@
    },
    "outputs": [],
    "source": [
-    "# Initialize the controller\n",
-    "lqr = do_mpc.controller.LQR(inverted_pendulum_lin)\n",
-    "\n",
-    "# Initialize the parameters\n",
+    "lqr = do_mpc.controller.LQR(inverted_pendulum_lin)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    },
+    "solution2": "hidden"
+   },
+   "outputs": [],
+   "source": [
     "env = create_inverted_pendulum_environment()\n",
     "lqr.settings.t_step = env.dt\n",
-    "lqr.settings.n_horizon = None  # infinite horizon\n",
-    "\n",
+    "lqr.settings.n_horizon = None  # infinite horizon"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    },
+    "solution2": "hidden"
+   },
+   "outputs": [],
+   "source": [
     "# Setting the objective\n",
     "Q = np.diag([100, 1])\n",
     "R = np.diag([10])\n",
     "display_array(\"Q\", Q)\n",
     "display_array(\"R\", R)\n",
-    "lqr.set_objective(Q=Q, R=R)\n",
-    "\n",
-    "# lqr setup\n",
+    "lqr.set_objective(Q=Q, R=R)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    },
+    "solution2": "hidden"
+   },
+   "outputs": [],
+   "source": [
     "lqr.setup()"
    ]
   },
@@ -2183,7 +2221,7 @@
    "outputs": [],
    "source": [
     "max_steps = 500\n",
-    "env = create_inverted_pendulum_environment(max_steps=max_steps)\n",
+    "env = create_inverted_pendulum_environment(render_mode=render_mode, max_steps=max_steps)\n",
     "controller = LQRController(lqr)\n",
     "results = simulate_environment(env, max_steps=max_steps, controller=controller)"
    ]
@@ -2199,7 +2237,7 @@
    },
    "outputs": [],
    "source": [
-    "media.show_video(results.frames, fps=1 / env.dt)"
+    "show_video(results.frames, fps=1 / env.dt)"
    ]
   },
   {
@@ -2941,7 +2979,7 @@
    "source": [
     "%%capture\n",
     "max_steps = 100\n",
-    "env = create_mass_spring_damper_environment(max_steps=max_steps)\n",
+    "env = create_mass_spring_damper_environment(render_mode=render_mode, max_steps=max_steps)\n",
     "controller = MPCController(mpc)\n",
     "results = simulate_environment(env, max_steps=max_steps, controller=controller)"
    ]
@@ -2956,7 +2994,7 @@
    },
    "outputs": [],
    "source": [
-    "media.show_video(results.frames, fps=1 / env.dt)"
+    "show_video(results.frames, fps=1 / env.dt)"
    ]
   },
   {
@@ -3254,7 +3292,7 @@
    "source": [
     "%%capture\n",
     "max_steps = 500\n",
-    "env = create_inverted_pendulum_environment(max_steps=max_steps)\n",
+    "env = create_inverted_pendulum_environment(render_mode=render_mode, max_steps=max_steps)\n",
     "controller = MPCController(mpc)\n",
     "results = simulate_environment(env, max_steps=max_steps, controller=controller)"
    ]
@@ -3270,7 +3308,7 @@
    },
    "outputs": [],
    "source": [
-    "media.show_video(results.frames, fps=1 / env.dt)"
+    "show_video(results.frames, fps=1 / env.dt)"
    ]
   },
   {
@@ -3329,7 +3367,7 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "solution2": "shown",
+    "solution2": "hidden",
     "solution2_first": true
    },
    "source": [
@@ -3342,7 +3380,7 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "solution2": "shown"
+    "solution2": "hidden"
    },
    "source": [
     "#### Controller"
@@ -3355,7 +3393,7 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "solution2": "shown"
+    "solution2": "hidden"
    },
    "outputs": [],
    "source": [
@@ -3369,7 +3407,7 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "solution2": "shown"
+    "solution2": "hidden"
    },
    "outputs": [],
    "source": [
@@ -3394,7 +3432,7 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "solution2": "shown"
+    "solution2": "hidden"
    },
    "source": [
     "#### Objective"
@@ -3407,7 +3445,7 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "solution2": "shown"
+    "solution2": "hidden"
    },
    "outputs": [],
    "source": [
@@ -3426,7 +3464,7 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "solution2": "shown"
+    "solution2": "hidden"
    },
    "outputs": [],
    "source": [
@@ -3440,7 +3478,7 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "solution2": "shown"
+    "solution2": "hidden"
    },
    "source": [
     "#### Constraints"
@@ -3453,7 +3491,7 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "solution2": "shown"
+    "solution2": "hidden"
    },
    "outputs": [],
    "source": [
@@ -3473,7 +3511,7 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "solution2": "shown"
+    "solution2": "hidden"
    },
    "source": [
     "#### Setup"
@@ -3486,7 +3524,7 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "solution2": "shown"
+    "solution2": "hidden"
    },
    "outputs": [],
    "source": [
@@ -3499,7 +3537,7 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "solution2": "shown"
+    "solution2": "hidden"
    },
    "source": [
     "#### Simulation"
@@ -3512,7 +3550,7 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "solution2": "shown"
+    "solution2": "hidden"
    },
    "outputs": [],
    "source": [
@@ -3535,7 +3573,7 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "solution2": "shown"
+    "solution2": "hidden"
    },
    "outputs": [],
    "source": [
@@ -3548,7 +3586,7 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "solution2": "shown"
+    "solution2": "hidden"
    },
    "source": [
     "#### Evaluation"
@@ -3561,7 +3599,7 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "solution2": "shown"
+    "solution2": "hidden"
    },
    "outputs": [],
    "source": [
@@ -3583,14 +3621,14 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "solution2": "shown"
+    "solution2": "hidden"
    },
    "outputs": [],
    "source": [
     "%%capture\n",
     "max_steps = 500\n",
     "env = create_inverted_pendulum_environment(\n",
-    "    max_steps=max_steps, cutoff_angle=np.inf, initial_angle=-np.pi\n",
+    "    render_mode=render_mode, max_steps=max_steps, cutoff_angle=np.inf, initial_angle=-np.pi\n",
     ")\n",
     "controller = MPCController(mpc)\n",
     "results = simulate_environment(env, max_steps=max_steps, controller=controller)"
@@ -3603,11 +3641,11 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "solution2": "shown"
+    "solution2": "hidden"
    },
    "outputs": [],
    "source": [
-    "media.show_video(results.frames, fps=1 / env.dt)"
+    "show_video(results.frames, fps=1 / env.dt)"
    ]
   },
   {
@@ -3617,7 +3655,7 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "solution2": "shown"
+    "solution2": "hidden"
    },
    "outputs": [],
    "source": [
